[gd_scene load_steps=9 format=3 uid="uid://dimi7btyc4ueq"]

[ext_resource type="Texture2D" uid="uid://dgtwn5gb5yhjw" path="res://assets/background/dhrth.jpg" id="1_gldpp"]
[ext_resource type="Script" path="res://scenes/menu/Menu.gd" id="2_20wpq"]
[ext_resource type="Texture2D" uid="uid://b4qxvepa0hdmm" path="res://assets/title.png" id="3_2kf5d"]
[ext_resource type="AudioStream" uid="uid://brm2j6liw3n2a" path="res://assets/BGM/Title BGM glass-of-wine-143532.mp3" id="4_oqunm"]

[sub_resource type="SystemFont" id="SystemFont_aoynj"]
font_names = PackedStringArray("Vladimir Script")
generate_mipmaps = true

[sub_resource type="SystemFont" id="SystemFont_sm7mr"]
font_names = PackedStringArray("Vladimir Script")

[sub_resource type="SystemFont" id="SystemFont_cser7"]
font_names = PackedStringArray("Vladimir Script")

[sub_resource type="SystemFont" id="SystemFont_58bm3"]
font_names = PackedStringArray("Vladimir Script")

[node name="Node2D" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(182, -23)
scale = Vector2(2.26, 2.26)
texture = ExtResource("1_gldpp")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Menu" type="MarginContainer" parent="."]
offset_left = -700.0
offset_top = 81.0
offset_right = -300.405
offset_bottom = 316.0
script = ExtResource("2_20wpq")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2

[node name="Play" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.32549, 0.333333, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.32549, 0.333333, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("SystemFont_aoynj")
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.32549, 0.333333, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.32549, 0.333333, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = SubResource("SystemFont_sm7mr")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Credits" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.32549, 0.333333, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.32549, 0.333333, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = SubResource("SystemFont_cser7")
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.32549, 0.333333, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.32549, 0.333333, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = SubResource("SystemFont_58bm3")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(-620, -170)
texture = ExtResource("3_2kf5d")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_oqunm")
autoplay = true

[connection signal="pressed" from="Menu/VBoxContainer/Play" to="Menu" method="_on_play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="Menu" method="_on_options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Credits" to="Menu" method="_on_credits_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="Menu" method="_on_quit_pressed"]
